--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
 <title>Real Estate</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="CSS/dashboard.css">
+<link rel="stylesheet" type="text/css" href="css/dashboard.css">
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 </script>
@@ -19,7 +19,7 @@
 	</header>
 	<section class="maincontent">
 		<div class="leftContent">
-			<img class="leftContentImg itemBoxShadow"src="IMAGE/img1.PNG" />
+			<img class="leftContentImg itemBoxShadow"src="image/img1.PNG" />
 			<nav class="navHeader itemBoxShadow">
 			<a href="#" id="showDialog"><h2>Ad Blockers: Setback or Spark for Innovation ? </h2></a>
 		</nav>	
@@ -29,19 +29,19 @@
 				<div class="leftDiv1">
 					<h3>India need USD 1 trillion for housing,information</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
 				</div>
-				<div class="rightDiv1"><img class="rightDiv1_img itemBoxShadow"src="IMAGE/img2.PNG" /></div>
+				<div class="rightDiv1"><img class="rightDiv1_img itemBoxShadow"src="image/img2.PNG" /></div>
 			</div>	
 			<div class="rightContentDiv2">
 				<div class="leftDiv2">
 					<h3>Weekend home in Alibaug is finally affordable</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 				</div>
-				<div class="rightDiv2"><img class="rightDiv2_img itemBoxShadow"src="IMAGE/img3.PNG" /></div>
+				<div class="rightDiv2"><img class="rightDiv2_img itemBoxShadow"src="image/img3.PNG" /></div>
 			</div>
 			<div class="rightContentDiv3">
 				<div class="leftDiv3">
 					<h3>Home loans and tax benefits if you own a house</h3><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
 				</div>
-				<div class="rightDiv3"><img class="rightDiv3_img itemBoxShadow"src="IMAGE/img4.PNG" /></div>
+				<div class="modalFooter"><img class="rightDiv3_img itemBoxShadow"src="image/img4.PNG" /></div>
 			</div>
 		</div>	
 	</section>
@@ -52,11 +52,14 @@
 				<h2>Ad Blockers: Setback or Spark for Innovation ? </h2>
 			</div>
 			<div class="modalContent">
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.<br/><br/> Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.Vivamus elementum semper nisi</p>.<br/><br/><strong> Continue Reading...</strong>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.<br/>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.Vivamus elementum semper nisi</p>
+			<div class="modalFooter"> 
+				<p><strong>Continue Reading...</strong></p>
+			</div>
 			</div>	  
 		</dialog>
 	</section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="JS/dashboard.js"></script>	
+<script src="js/dashboard.js"></script>	
 </body>
 </html>
